--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next/mdx": "^15.5.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "next-intl": "^3.26.5",
     "next-mdx-remote": "^5.0.0",
